# rust-fullstack

./: .gitignore  Cargo.toml  Dockerfile  README.md  add-test-user.sh  build.sh  config.yaml  keycloak-realm.json  renovate.json  run-local-keycloak.sh
.github/: dependabot.yml
.github/workflows/: renovate.json  renovate.yml  rust-clippy.yml  rust.yml
backend-artifact/: Cargo.toml  build.rs  config.yaml
backend-artifact/src/: main.rs
backend-impl/: Cargo.toml
backend-impl/src/: config.rs  lib.rs
yew-app/: Cargo.toml  Trunk.toml  build.rs  index.html  local.css
yew-app/assets/: style.scss
yew-app/graphql/: add.graphql  settings.graphql
yew-app/node/: package-lock.json  package.json
yew-app/src/: error.rs  graphql.rs  main.rs
yew-app/src/app/: mod.rs
yew-app/src/app/components/: adder.rs
yew-app/src/pages/: adder.rs  app.rs  mod.rs
