[package]
name = "backend-artifact"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-static-files = "4"
static-files = "0.2.3"
backend-impl = { path = "../backend-impl" }
async-graphql = "7.0.15"
async-graphql-actix-web = "7.0.15"
env_logger = "0.11.6"
log = "0.4"
prometheus = "0.13.4"
actix-web-prometheus = { version = "0.1.2", features = ["process"] }
thiserror = "2.0.11"
actix-4-jwt-auth = { version = "1.2.5" }
tracing-actix-web = "0.7"
tracing = { version = "0.1", features = ["log"] }
serde = "1.0.218"
serde_json = "1.0.139"
futures-util = "0.3.31"

[build-dependencies]
static-files = "0.2.4"