[package]
name = "backend-artifact"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-static-files = "4"
static-files = "0.3"
backend-impl = { path = "../backend-impl" }
async-graphql = "7.0"
async-graphql-actix-web = "7.0"
env_logger = "0.11"
log = "0.4"
prometheus = "0.14"
actix-web-prometheus = { version = "0.1", features = ["process"], git = "https://github.com/koa/actix-web-prometheus" }
thiserror = "2.0"
actix-4-jwt-auth = { version = "1.2" }
tracing-actix-web = "0.7"
serde_json = "1.0"
futures-util = "0.3"

[build-dependencies]
static-files = "0.3"