[package]
name = "yew-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = { version = "0.22", features = ["csr"] }
yew-nested-router = { version = "0.8" }
patternfly-yew = { version = "0.7" }
graphql_client = { version = "0.16", features = ["reqwest-rustls"] }
reqwest = { version = "0.13", feature = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"
thiserror = "2.0"

yew-oauth2 = "0.13"
lazy_static = "1.5"
console_error_panic_hook = "0.1"

[build-dependencies]
backend-impl = { path = "../backend-impl" }
anyhow = "1.0"